# simplecharts

./: CHANGES.md  CHANGES.rst  README.md  README.rst  chart.py  pyproject.toml  setup.py  simplecharts.py  test.py
.github/workflows/: main.yml
tests/: empty.json  float.json  long.json  no-legend.json  simple.json  single.json
