[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "simplecharts"
version = "0.1.1"
description = "SVG charts without dependencies"
readme = "README.md"
license = {text = "MIT"}
keywords = ["svg", "charts"]
authors = [
    {name = "Tobias Bengfort", email = "tobias.bengfort@posteo.de"}
]
classifiers = [
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://github.com/xi/simplecharts"

[project.scripts]
simplecharts = "simplecharts:main"

[tool.setuptools]
py-modules = ["simplecharts"]
